--- a/package.json
+++ b/package.json
@@ -20,9 +20,16 @@
     "firebase-admin": "^9.11.1",
     "glob": "^7.1.7",
     "http-status": "^1.5.0",
+    "moment": "^2.29.1",
+    "mysql2": "^2.3.0",
     "node-dependency-injection": "^2.7.1",
     "nodemon": "^2.0.12",
     "typescript": "^4.3.5",
+    "uuid": "^8.3.2",
+    "uuid-validate": "0.0.3",
     "winston": "^3.3.3"
+  },
+  "devDependencies": {
+    "@types/mysql2": "github:types/mysql2"
   }
 }
