added chat between 2 or more devices

--- a/src/dependency-injection/controllers/application.yaml
+++ b/src/dependency-injection/controllers/application.yaml
@@ -15,8 +15,15 @@ services:
 
   controllers.MessageSenderController:
     class: ./../../controllers/MessageSenderController
-    arguments: ['@controllers.messaging']
-
+    
   controllers.MessageSynchronizerController:
     class: ./../../controllers/MessageSynchronizerController
-    arguments: ['@controllers.synchronizer']
+
+  controllers.MessageACKController:
+    class: ./../../controllers/MessageACKController
+
+  controllers.TokenValidatorController:
+    class: ./../../controllers/TokenValidatorController
+  
+  controllers.GetContactsController:
+    class: ./../../controllers/GetContactsController
