--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mysql2": "^2.3.0",
     "node-dependency-injection": "^2.7.1",
     "nodemon": "^2.0.12",
+    "ts-mapper": "^1.2.4",
     "typescript": "^4.3.5",
     "uuid": "^8.3.2",
     "uuid-validate": "0.0.3",
