--- a/src/dependency-injection/endpoints/application.yaml
+++ b/src/dependency-injection/endpoints/application.yaml
@@ -10,3 +10,6 @@ services:
       
   endpoints.messages.ack:
     class: ./../../api/endpoints/messages/ack
+
+  endpoints.health.checker:
+    class: ./../../api/endpoints/health/checker
